--- a/sitedata/index.html
+++ b/sitedata/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		  <link rel="stylesheet" href="style.css">
+		  <script src="script.js"></script>
 	</head>
 
 	<body>
-		<h1>HELLO WORLD</h1>
+		<h1 class="test">HI WORLD</h1>
+		<button type="button" onclick="thing()">TEST BUTTON</button>
+		<br>
+		<a href="about.html">ALL ABOUT MEEEEE</a>
+		<a href="weirdmeese.html">MY GAME!!</a>
+		<h1 style="color: pink;">MY SOCIAL SECURITY NUMBER 892703927089187350</h1>
 	</body>
 </html>
