--- a/sitedata/404error.html
+++ b/sitedata/404error.html
@@ -1,11 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<!--<link rel="stylesheet" href="style.css">-->
 	</head>
 
 	<body>
 		<h1>404 ERROR!!! OH NO</h1>
 		<h1>SORRY THIS PAGE DOESN'T EXIST!!!</h1>
 	</body>
+	<style>
+		body {
+			background-image: url('res/CATAH.jpg');
+		}
+	</style>
 </html>
