--- a/sitedata/index.html
+++ b/sitedata/index.html
@@ -6,11 +6,26 @@
 	</head>
 
 	<body>
-		<h1 class="test">HI WORLD</h1>
+		<div class="topnav">
+			<a href="index.html">Home</a>
+			<a href="about">About</a>
+			<a href="https://uppitydonkey57.itch.io/" target="_blank">My Games</a>
+			<a href="weird-meese">Weird Meese</a>
+			<a href="https://github.com/Uppitydonkey57" target="_blank">Github</a>
+		</div>
+
+		<h1>HI WORLD</h1>
 		<button type="button" onclick="thing()">TEST BUTTON</button>
 		<br>
-		<a href="about.html">ALL ABOUT MEEEEE</a>
-		<a href="weirdmeese.html">MY GAME!!</a>
-		<h1 style="color: pink;">MY SOCIAL SECURITY NUMBER 892703927089187350</h1>
+		<a href="https://natecarr.xyz/"  target="_blank">ONE OF THE BEST WEBSITES OF ALL TIME</a>
+		<br>
+
+		<h2>View The Webserver Source Code</h2>
+		<a href="https://github.com/Uppitydonkey57/MyWebsiteCpp-" target="_blank">GITHUB</a>
+
+		<h1 style="color: pink;">STILL IN PROGRESS</h1>
+		<br>
+		<h2> I made this website in C++!</h2>
+		<img src="res/CppLogo.png" style="width:20%;">
 	</body>
 </html>
